# smorgasbord

./: .gitmodules  Cargo.toml  recipes.txt
src/: account.rs  data.rs  main.rs  menu.rs  menus.rs  person.rs  recipe.rs  recipes.rs  user.rs  util.rs
src/menus/: daily_menu.rs  main_menu.rs  menu.rs  new_account_menu.rs  new_user_menu.rs  select_recipes_menu.rs  setup_menu.rs  weekly_menu.rs
