[package]
name = "smorgasbord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_fs = "1.0.13"
inquire = "0.6.2"
rstest = "0.18.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = "0.25.0"
strum_macros = "0.25"
